--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,4 +1,4 @@
-.item {
+.todo {
   background-color: #e64944;
   width: 45%;
   text-align: left;
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 
-.item.completed {
+.todo.completed {
   background-color: #d17d7c;
   text-decoration: line-through;
 }
